--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,19 @@ body {
   font-family: 'Roboto', sans-serif;
   letter-spacing: 0.03em;
 }
+/* ---------------header   */
+
+.header-container {
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: 0px;
+  padding-bottom: 0px;
+  display: block;
+  align-items: center;
+  width: 1600px;
+  border-bottom: 1px solid #ececec;
+}
+
 .list {
   list-style: none;
   letter-spacing: 0.02em;
@@ -36,25 +49,17 @@ body {
   color: #000000;
   font-family: 'Raleway', sans-serif;
 }
-    header {
-    margin-left: auto;
-    margin-right: auto;
-    padding-top: 0px;
-    padding-bottom: 0px;
-    display: block;
-    width: 1600px;  
-    padding-left: 215px;
-    padding-right: 215px;
-    }
 
 /* site nav */
-.site-nav{
-display: flex;
-margin-left: 93px;
+
+.site-nav {
+  display: flex;
+  margin-left: 93px;
+  align-items: center;
 }
 
-.site-nav .item+.item{
-    margin-left: 50px;
+.site-nav .item + .item {
+  margin-left: 50px;
 }
 
 .site-nav .link {
@@ -78,31 +83,29 @@ margin-left: 93px;
   color: var(--primary-text-color);
   text-decoration: none;
 }
-header {
-  border-bottom: 1px solid #ECECEC;
-
-width: 1600px;
-}
-
 
 /* auth-nav */
-.auth-nav{
-  display: flex; 
-  margin-left: auto; 
+.auth-nav {
+  display: flex;
+  margin-left: auto;
 }
-.auth-nav  .item+.item{
-    margin-left: 50px;
+.auth-nav .item + .item {
+  margin-left: 50px;
 }
 
-.auth-nav .contact-link{
-padding-top: 32px;
+.auth-nav .contact-link {
+  padding-top: 32px;
   padding-bottom: 32px;
-  }
+}
 
 /* main-nav */
-.main-nav{
-    display: flex;
-    align-items: center;
+
+.main-nav {
+  margin-left: auto;
+  margin-right: auto;
+  width: 1200px;
+  display: flex;
+  align-items: center;
 }
 
 /* hero section */
@@ -114,7 +117,6 @@ padding-top: 32px;
   text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
-  
 }
 .section-title {
   color: var(--title-text-color);
@@ -122,9 +124,7 @@ padding-top: 32px;
   font-size: 36px;
   line-height: 1.16;
   text-align: center;
-padding-bottom: 50px;
-
-
+  padding-bottom: 50px;
 }
 .button-primary {
   color: var(--primary-white-color);
@@ -136,10 +136,10 @@ padding-bottom: 50px;
   letter-spacing: 0.06em;
   border-radius: 4px;
   padding: 10px 32px;
-min-width: 200px;
-text-align: center;
+  min-width: 200px;
+  text-align: center;
 
-margin: 0 auto;
+  margin: 0 auto;
   display: block;
 }
 .button-primary:hover {
@@ -149,47 +149,63 @@ margin: 0 auto;
 .hero {
   background-color: #2f303a;
   width: 1600px;
-height: 600px;
-padding-top: 200px;
- margin-left: auto;
-    margin-right: auto;
-
+  height: 600px;
+  padding-top: 200px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
-h2, li, h3, p{
-    margin-top: 0;
-    margin-bottom: 0;
+h2,
+li,
+h3,
+p {
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
 /* переваги / feature-list */
-.none{
- display: none;   
+.none {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
-.section{
-    margin-left: auto;
-    margin-right: auto;
-    padding-top: 94px;
-    /* padding-bottom: 94px; */
-    display: block;
+.section {
+  padding-top: 94px;
+  padding-bottom: 94px;
+
+  margin-left: auto;
+  margin-right: auto;
+
+  display: block;
 }
-.work{
-    padding-bottom: 50px;
+.work {
+  padding-bottom: 50px;
 }
 
-.conteiner{
-    width: 1600px;
-     margin-left: auto;
-    margin-right: auto;
-    padding-top: 0;
-    padding-bottom: 94px;
-    padding-left: 215px;
-    padding-right: 215px;
+.conteiner {
+  width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 15px;
+  padding-right: 15px;
 }
+
 .feature-list {
   list-style: none;
-display: flex;
-padding-left: 0;
+  display: flex;
+  padding-left: 0;
+  margin-top: 0;
+  margin-bottom: 0;
 }
+
 .feature-list .title {
   color: var(--title-text-color);
   font-weight: 700;
@@ -198,96 +214,96 @@ padding-left: 0;
   text-transform: uppercase;
   margin-bottom: 10px;
 }
+
 .feature-list p {
   font-weight: 400;
   font-size: 14px;
   line-height: 1.71;
 }
 
-
-    .feature-list .feature-item+.feature-item {
-margin-left: 50px;
+.feature-list .feature-item + .feature-item {
+  margin-left: 50px;
 }
 
 /* чим займаються */
-.work-list{
-display: flex;    
+
+.work-conteiner {
+  padding-top: 0;
+}
+.work-list {
+  display: flex;
 }
 
-.work-list .work-item+.work-item{
- margin-left: 30px;
+.work-list .work-item + .work-item {
+  margin-left: 30px;
 }
 
 /* наша команда */
 .team-list {
   list-style: none;
   display: flex;
-  padding-left: 0;
-  margin-bottom: 0;
+  align-items: center;
+  gap: 30px;
+  padding: 0;
+  margin: 0;
 }
-.team-list img{
-    margin-bottom: 30px;
-    margin-top: 0; 
 
+.team-list img {
+  margin-bottom: 30px;
+  margin-top: 0;
 }
+
 .team-list h3 {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.18;
   color: var(--title-text-color);
   margin-bottom: 10px;
-    margin-top: 0;
+  margin-top: 0;
 }
+
 .team-list p {
   font-weight: 400;
   font-size: 16px;
   line-height: 1.18;
-   /* margin-bottom: 30px; */
-    margin-top: 0;
-}
-.team{
-    padding-top: 94px;
-    background: #F5F4FA;
 }
 
-.team-item img{
+.team {
+  background: #f5f4fa;
+}
+
+.team-item img {
   margin-bottom: 0;
 }
-.team-list .team-item+.team-item{
-    margin-left: 30px;
-}
 
-.staff{
-  background: #FFFFFF;
-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-border-radius: 0px 0px 4px 4px;
-padding: 30px 0;
-text-align: center;
-/* border: 1px solid #EEEEEE;
-margin-top: 0;
-padding: 20px 24px; */
-
-
+.staff {
+  background: #ffffff;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+  padding: 30px 0;
+  text-align: center;
 }
 
 /* підвал */
+
 footer {
   background-color: #2f303a;
   width: 1600px;
-   margin-left: auto;
-    margin-right: auto;
-    padding-bottom: 0;
-     padding: 60px 215px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-bottom: 0;
+  padding: 60px 215px;
 }
+
 .footer-nav {
   list-style: none;
   font-style: normal;
-   padding-left: 0px;
-    padding-right: 0px;
-    margin: 0;
-    margin-top: 20px;
+  padding-left: 0px;
+  padding-right: 0px;
+  margin: 0;
+  margin-top: 20px;
 }
-
 
 .footer-nav a {
   color: var(--primary-white-color);
@@ -295,13 +311,12 @@ footer {
   font-size: 14px;
   line-height: 2;
   text-decoration: none;
- 
 }
-
 
 .footer-nav .contact-link {
   color: rgba(255, 255, 255, 0.6);
 }
+
 .add-maps {
   text-decoration: none;
 }
@@ -314,17 +329,16 @@ footer {
   line-height: 1.15;
   text-decoration: none;
 }
+
 .contact-link:hover,
 .add-maps:hover,
 .contact-link:focus,
 .add-maps:focus {
   color: var(--accent-color);
 }
-/* .footer-nav .link:hover,
-.footer-nav .link:focus {
-    color: var(--accent-color);
-} */
+
 /* -------------------------------------Портфолио--------- */
+
 .samp-button {
   font-weight: 500;
   font-size: 16px;
@@ -332,14 +346,13 @@ footer {
   text-align: center;
   letter-spacing: 0.03em;
   font-family: inherit;
-padding: 6px 22px;
-margin-left: 4px;
-margin-right: 4px;
-border-radius: 4px;
-border-color: transparent;
-box-sizing: border-box;
+  padding: 6px 22px;
 
+  border-radius: 4px;
+  border-color: transparent;
+  box-sizing: border-box;
 }
+
 .sample h2 {
   color: var(--title-text-color);
   font-weight: 700;
@@ -347,13 +360,15 @@ box-sizing: border-box;
   line-height: 2;
   letter-spacing: 0.06em;
 }
+
 .sample p {
   font-weight: 400;
   font-size: 16px;
   line-height: 30px;
   letter-spacing: 0.03em;
 }
-.sample img{
+
+.sample img {
   margin-bottom: 0;
 }
 
@@ -367,43 +382,32 @@ box-sizing: border-box;
   cursor: pointer;
 }
 
-.sample{
-    display: flex;
-    flex-wrap: wrap;
+.sample {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 30px;
 }
 
-.sample-item{
-margin-right: 30px;
-margin-bottom: 30px;
-
-} 
-.content{
-   border: 1px solid #EEEEEE;
-margin-top: 0;
-padding: 20px 24px;
+.sample-item {
+  gap: 30px;
+}
+.content {
+  border: 1px solid #eeeeee;
+  margin-top: 0;
+  padding: 20px 24px;
 }
 
-.sample-item:nth-child(3n){
-margin-right: 0;
-
+.sample-item:nth-child(3n) {
+  margin-right: 0;
 }
 
-
-.sample-item:nth-last-child(-n + 3 ){
-margin-bottom: 0;
+.sample-item:nth-last-child(-n + 3) {
+  margin-bottom: 0;
 }
 
-.sample-nav{
-  margin-top: 94px;
+.sample-nav {
   margin-bottom: 50px;
   display: flex;
-   
-    justify-content: center;
+
+  justify-content: center;
 }
-/* заголовки 212121 */
-/* акцентний колір (веб) 2196F3 */
-/* колір студіо 000000 */
-/* колір банерного заголовку FFFFFF */
-/*  колір підтексту 757575 */
-/* колір фону для банера та підвалу 2F303A */
-/* фон для команди F5F4FA */
