--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,10 @@ body {
   background-color: var(--primary-white-color);
   font-family: 'Roboto', sans-serif;
   letter-spacing: 0.03em;
+  box-sizing: border-box;
+  width: 1600px;
+  margin-left: auto;
+  margin-right: auto;
 }
 /* ---------------header   */
 
@@ -24,7 +28,7 @@ body {
   padding-bottom: 0px;
   display: block;
   align-items: center;
-  width: 1600px;
+  width: 1200px;
   border-bottom: 1px solid #ececec;
 }
 
@@ -117,6 +121,13 @@ body {
   text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
+  max-width: 696px;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 30;
+  margin-top: 0;
+  display: block;
 }
 .section-title {
   color: var(--title-text-color);
@@ -124,8 +135,8 @@ body {
   font-size: 36px;
   line-height: 1.16;
   text-align: center;
-  padding-bottom: 50px;
 }
+
 .button-primary {
   color: var(--primary-white-color);
   background-color: var(--accent-color);
@@ -142,6 +153,7 @@ body {
   margin: 0 auto;
   display: block;
 }
+
 .button-primary:hover {
   background-color: #188ce8;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
@@ -149,9 +161,9 @@ body {
 
 .hero {
   background-color: #2f303a;
-  width: 1600px;
-  height: 600px;
+
   padding-top: 200px;
+  padding-bottom: 200px;
   margin-left: auto;
   margin-right: auto;
 }
@@ -187,12 +199,12 @@ p {
 
   display: block;
 }
-.work {
+/* .work {
   padding-bottom: 50px;
-}
+} */
 
 .conteiner {
-  width: 1200px;
+  max-width: 1200px;
   margin-left: auto;
   margin-right: auto;
   padding-left: 15px;
@@ -228,11 +240,12 @@ p {
 
 /* чим займаються */
 
-.work-conteiner {
+.work-section {
   padding-top: 0;
 }
 .work-list {
   display: flex;
+  margin-top: 50px;
 }
 
 .work-list .work-item + .work-item {
@@ -246,12 +259,13 @@ p {
   align-items: center;
   gap: 30px;
   padding: 0;
-  margin: 0;
+  margin-top: 50px;
 }
 
 .team-list img {
   margin-bottom: 30px;
   margin-top: 0;
+  display: block;
 }
 
 .team-list h3 {
@@ -290,11 +304,12 @@ p {
 
 footer {
   background-color: #2f303a;
-  width: 1600px;
+  font-family: inherit;
   margin-left: auto;
   margin-right: auto;
   padding-bottom: 0;
-  padding: 60px 215px;
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
 
 .footer-nav {
@@ -391,6 +406,9 @@ footer {
 
 .sample-item {
   gap: 30px;
+}
+.sample-img {
+  display: block;
 }
 .content {
   border: 1px solid #eeeeee;
