--- a/css/styles.css
+++ b/css/styles.css
@@ -22,7 +22,7 @@ body {
 /* ---------------header   */
 header {
   border-bottom: 1px solid #ececec;
-  max-width: 1600px;
+  /* max-width: 1600px; */
   margin-left: auto;
   margin-right: auto;
 }
@@ -316,7 +316,7 @@ footer {
   padding-bottom: 0;
   padding-top: 60px;
   padding-bottom: 60px;
-  max-width: 1600px;
+  /* max-width: 1600px; */
 }
 
 .footer-nav {
